<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/fondo"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sabor_nacional"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textSize="18sp"
        android:inputType="text"
        android:textColorHint="@color/blanco"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColorHint="@color/blanco"
        android:layout_marginBottom="8dp"
        android:imeOptions="actionDone"/>

    <CheckBox
        android:id="@+id/chkNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacion"
        android:textColor="@color/blanco"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:background="@drawable/boton_shape"
        android:textSize="16sp"
        android:textColor="@color/blanco"
        android:textStyle="bold"/>

</LinearLayout>
