<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@drawable/fondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBienvenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textColor="@color/blanco"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnCosta"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:background="@drawable/boton_reg_costa"
                android:text="@string/costa"
                android:textColor="@color/finFondo"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnSierra"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:background="@drawable/boton_reg_sierra"
                android:text="@string/sierra"
                android:textColor="@color/finFondo"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnSelva"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:background="@drawable/boton_reg_selva"
                android:text="@string/selva"
                android:textColor="@color/finFondo"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:layout_gravity="center"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/imgInfo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/acerca"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tviLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar_sesion"
                android:layout_gravity="center"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>